<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:text="@string/customer"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailaddr"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/customer_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/register" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/customer_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/customer_register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_register_btn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_horizontal"
                android:text="@string/notregyet"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/customer_login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_register_btn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_horizontal"
                android:text="@string/alreadyreg"
                android:textSize="22sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
