<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.cab.CustomersMapActivity"
    android:background="@color/colorPrimaryDark">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/customer_settings_btn"
        android:layout_above="@+id/customer_call_vendor_btn" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customer_call_vendor_btn"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/customer_call_vendor_btn"
                android:layout_alignTop="@+id/map"
                android:layout_alignBottom="@+id/map"
                android:layout_marginTop="437dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/Vegetable_Vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Vegetables Vendor">

                </RadioButton>


                <RadioButton
                    android:id="@+id/Fruits_Vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Fruits Vendor">

                </RadioButton>

                <RadioButton
                    android:id="@+id/Chaat_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Chaat Vendor">

                </RadioButton>

                <RadioButton
                    android:id="@+id/StreetFood_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Street Food Vendor">

                </RadioButton>

                <RadioButton
                    android:id="@+id/IceCream_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Ice Cream Vendor">

                </RadioButton>

                <RadioButton
                    android:id="@+id/HouseholdHawkers_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Household Hawkers">

                </RadioButton>

                <RadioButton
                    android:id="@+id/Pickle_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Pickle Vendor">

                </RadioButton>

                <RadioButton
                    android:id="@+id/Clothes_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Clothes Vendor"></RadioButton>

                <RadioButton
                    android:id="@+id/ShakesandSofty_Vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:text="Shakes and Softy Vendor">

                </RadioButton>


            </RadioGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout

        android:id="@+id/rell"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customer_call_vendor_btn"
        android:layout_margin="10dp"
        android:visibility="gone"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_vendor"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#c880ff"
            android:layout_below="@+id/app_bar_settings"
         android:layout_marginStart="15dp"
            android:padding="3dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/name_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image_vendor"
            android:text="Vendor Name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/phone_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image_vendor"
            android:text="Vendor Phone Number"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@+id/name_vendor"
            android:textSize="14dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/cart_number_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image_vendor"
            android:text="Vendor Cart Number"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@+id/phone_vendor"
            android:textSize="14dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/call_vendor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/phone"
            android:tint="@android:color/black" />

    </RelativeLayout>



    <Button
        android:id="@+id/customer_call_vendor_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="0dp"
        android:layout_marginBottom="9dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/call_a_vendor"
        android:textStyle="bold" />

        <Button
            android:id="@+id/customer_settings_btn"
            android:layout_width="190dp"

            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/settings"
            android:textStyle="bold" />


        <Button
            android:id="@+id/customer_logout_btn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@color/common_google_signin_btn_text_dark_pressed"
            android:text="@string/logout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="15sp"
            />
















</RelativeLayout>


